# inkmlviewer

./: get_random_inkml_file.sh  inkmlviewer.cpp  inkmlviewer.desktop.in  inkmlviewer.h  inkmlviewer.hpp  main.cpp  meson.build  myxmlparser.cpp  myxmlparser.h  myxmlparser.hpp
